--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Testing out GitHub Pages</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css"
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm David Norrish!</h1>
-				<p>I'm completing a master of computing, specializing in AI, and have a background in science, health and data analysis. <a href="/about">Read more about my life here.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:norrish.d@gmail.com">email</a></li>
-        		<li><a href="https://github.com/norrishd">github.com/norrishd</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: David Norrish, MSc BSc
+---
+<div class="blurb">
+	<h1>Hi there, I'm David Norrish</h1>
+	<p>Former life science and health researcher, completing a master of computing and specializing in AI. <a href="/about">Read more about my life.</a></p>
+</div><!-- /.blurb -->
