--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: David Norrish, MSc BSc
 ---
 <div class="blurb">
 	<h1>Hi there, I'm David Norrish</h1>
-	<p>Former life science and health researcher, completing a master of computing and specializing in AI. <a href="/about">Read more about my life.</a></p>
+	<p>Former life sciences and health researcher, now completing a master of computing with a specialization in AI. 
+		<br/>
+	<a href="/about">Read more about my life.</a></p>
 </div><!-- /.blurb -->
